--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML>
 <!--
-	FRST Properties LLC - based on Halcyonic by HTML5 UP
+	FRST Properties LLC by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
@@ -9,51 +11,133 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body>
-		<div id="page-wrapper">
+	<body class="homepage">
 
-			<!-- Header -->
-			<section id="header">
-				<div class="container">
-					<div class="row">
-						<div class="col-12">
+		<!-- Header -->
+		<section id="header" class="wrapper">
+			<!-- Logo -->
+			<div id="logo">
+				<h1><a href="#">FRST Properties LLC</a></h1>
+				<span class="byline">Veteran-owned Real Estate in Huntsville, AL</span>
+			</div>
 
-							<!-- Logo -->
-							<h1><a href="index.html" id="logo">FRST Properties LLC</a></h1>
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li class="active"><a href="index.html">Home</a></li>
+					<li><a href="about-us.html">About Us</a></li>
+					<li><a href="available-homes.html">Available Homes</a></li>
+					<li><a href="investor-portal.html">Investor Portal</a></li>
+					<li><a href="contact-us.html">Contact Us</a></li>
+				</ul>
+			</nav>
+		</section>
 
-							<!-- Navigation -->
-							<nav id="nav">
-								<a href="index.html">Home</a>
-								<a href="about-us.html">About Us</a>
-								<a href="available-homes.html">Available Homes</a>
-								<a href="investor-portal.html">Investor Portal</a>
-								<a href="contact-us.html">Contact Us</a>
-							</nav>
+		<!-- Banner -->
+		<section id="banner">
+			<header>
+				<h2>Veteran-owned and family-operated. We provide quality, affordable homes in North Alabama.</h2>
+				<a href="available-homes.html" class="button">View Available Homes</a>
+			</header>
+		</section>
 
-						</div>
-					</div>
+		<!-- Features -->
+		<section id="feature" class="wrapper">
+			<div class="container">
+				<div class="row">
+					<section class="4u">
+						<span class="pennant"><span class="fa fa-home"></span></span>
+						<h3>Our Mission</h3>
+						<p>We’re committed to transparency, integrity, and tenant satisfaction throughout every home we lease.</p>
+					</section>
+					<section class="4u">
+						<span class="pennant"><span class="fa fa-dollar-sign"></span></span>
+						<h3>Why Invest With Us</h3>
+						<p>We offer stable returns, long-term partnerships, and expert knowledge of the Alabama market.</p>
+					</section>
+					<section class="4u">
+						<span class="pennant"><span class="fa fa-handshake"></span></span>
+						<h3>Sell Your Home for Cash</h3>
+						<p>Need to sell quickly? We offer fair cash offers with no fees or closing costs.</p>
+					</section>
 				</div>
+			</div>
+		</section>
 
-				<!-- Banner -->
-				<div id="banner">
-					<div class="container">
-						<div class="row">
-							<div class="col-6 col-12-medium">
-								<!-- Banner Copy -->
-								<p>Veteran-owned and family-operated. We provide quality, affordable homes in North Alabama.</p>
-								<a href="available-homes.html" class="button-large">View Available Homes</a>
-							</div>
-							<div class="col-6 col-12-medium imp-medium">
-								<!-- Banner Image -->
-								<a href="available-homes.html" class="bordered-feature-image">
-									<img src="images/banner.jpg" alt="FRST Banner" />
-								</a>
-							</div>
-						</div>
-					</div>
+		<!-- Main Content -->
+		<section class="wrapper style1">
+			<div class="container">
+				<div class="row">
+					<section class="6u">
+						<header class="major">
+							<h2>Who We Are</h2>
+							<span class="byline">Veteran-founded, mission-driven housing.</span>
+						</header>
+						<p>We are a local, veteran-owned company based in Huntsville, Alabama, focused on acquiring, renovating, and managing single-family rentals with integrity and professionalism.</p>
+						<a href="about-us.html" class="button">Learn More</a>
+					</section>
+					<section class="6u">
+						<header class="major">
+							<h2>What We Offer</h2>
+							<span class="byline">From rentals to investments, we’ve got you covered.</span>
+						</header>
+						<p>Whether you're looking to rent a quality home or invest in real estate for passive income, FRST Properties LLC provides reliable, transparent, and professional service every step of the way.</p>
+						<a href="investor-portal.html" class="button">Get Started</a>
+					</section>
 				</div>
-			</section>
+			</div>
+		</section>
 
-		</div>
+		<!-- Testimonials -->
+		<section class="carousel wrapper">
+			<div class="container">
+				<header class="major">
+					<h2>What Our Tenants & Investors Say</h2>
+					<span class="byline">See testimonials from those we serve.</span>
+				</header>
+				<!-- Add carousel items here if needed -->
+			</div>
+		</section>
+
+		<!-- Footer -->
+		<section id="footer" class="wrapper">
+			<div class="container">
+				<div class="row">
+					<section class="4u">
+						<header class="major">
+							<h2>Quick Links</h2>
+						</header>
+						<ul class="link-list">
+							<li><a href="about-us.html">About Us</a></li>
+							<li><a href="available-homes.html">Available Homes</a></li>
+							<li><a href="investor-portal.html">Investor Portal</a></li>
+							<li><a href="contact-us.html">Contact Us</a></li>
+						</ul>
+					</section>
+					<section class="4u">
+						<header class="major">
+							<h2>Why Choose FRST Properties?</h2>
+						</header>
+						<p>We’re a local, veteran-owned company focused on providing clean, affordable rentals and attractive investment opportunities across North Alabama.</p>
+					</section>
+					<section class="4u">
+						<header class="major">
+							<h2>Contact</h2>
+						</header>
+						<ul class="link-list">
+							<li>Email: <a href="mailto:frstpropertiesllc@gmail.com">frstpropertiesllc@gmail.com</a></li>
+							<li>Location: Huntsville, Alabama</li>
+						</ul>
+					</section>
+				</div>
+			</div>
+			<div id="copyright">
+				<ul>
+					<li>&copy; 2025 FRST Properties LLC</li>
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
+			</div>
+		</section>
+
 	</body>
 </html>
