--- a/index.html
+++ b/index.html
@@ -1,143 +1,274 @@
 <!DOCTYPE HTML>
 <!--
-	FRST Properties LLC by HTML5 UP
+	Halcyonic by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
 	<head>
-		<title>FRST Properties LLC | Quality Rentals in Huntsville</title>
+		<title>Halcyonic by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
-	<body class="homepage">
+	<body>
+		<div id="page-wrapper">
 
-		<!-- Header -->
-		<section id="header" class="wrapper">
-			<!-- Logo -->
-			<div id="logo">
-				<h1><a href="#">FRST Properties LLC</a></h1>
-				<span class="byline">Veteran-owned Real Estate in Huntsville, AL</span>
-			</div>
+			<!-- Header -->
+				<section id="header">
+					<div class="container">
+						<div class="row">
+							<div class="col-12">
 
-			<!-- Nav -->
-			<nav id="nav">
-				<ul>
-					<li class="active"><a href="index.html">Home</a></li>
-					<li><a href="about-us.html">About Us</a></li>
-					<li><a href="available-homes.html">Available Homes</a></li>
-					<li><a href="investor-portal.html">Investor Portal</a></li>
-					<li><a href="contact-us.html">Contact Us</a></li>
-				</ul>
-			</nav>
-		</section>
+								<!-- Logo -->
+									<h1><a href="index.html" id="logo">Halcyonic</a></h1>
 
-		<!-- Banner -->
-		<section id="banner">
-			<header>
-				<h2>Veteran-owned and family-operated. We provide quality, affordable homes in North Alabama.</h2>
-				<a href="available-homes.html" class="button">View Available Homes</a>
-			</header>
-		</section>
+								<!-- Nav -->
+									<nav id="nav">
+										<a href="index.html">Homepage</a>
+										<a href="threecolumn.html">Three Column</a>
+										<a href="twocolumn1.html">Two Column #1</a>
+										<a href="twocolumn2.html">Two Column #2</a>
+										<a href="onecolumn.html">One Column</a>
+									</nav>
 
-		<!-- Features -->
-		<section id="feature" class="wrapper">
-			<div class="container">
-				<div class="row">
-					<section class="4u">
-						<span class="pennant"><span class="fa fa-home"></span></span>
-						<h3>Our Mission</h3>
-						<p>We’re committed to transparency, integrity, and tenant satisfaction throughout every home we lease.</p>
-					</section>
-					<section class="4u">
-						<span class="pennant"><span class="fa fa-dollar-sign"></span></span>
-						<h3>Why Invest With Us</h3>
-						<p>We offer stable returns, long-term partnerships, and expert knowledge of the Alabama market.</p>
-					</section>
-					<section class="4u">
-						<span class="pennant"><span class="fa fa-handshake"></span></span>
-						<h3>Sell Your Home for Cash</h3>
-						<p>Need to sell quickly? We offer fair cash offers with no fees or closing costs.</p>
-					</section>
+							</div>
+						</div>
+					</div>
+					<div id="banner">
+						<div class="container">
+							<div class="row">
+								<div class="col-6 col-12-medium">
+
+									<!-- Banner Copy -->
+										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
+										<a href="#" class="button-large">Go on, click me!</a>
+
+								</div>
+								<div class="col-6 col-12-medium imp-medium">
+
+									<!-- Banner Image -->
+										<a href="#" class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+
+			<!-- Features -->
+				<section id="features">
+					<div class="container">
+						<div class="row">
+							<div class="col-3 col-6-medium col-12-small">
+
+								<!-- Feature #1 -->
+									<section>
+										<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
+										<h2>Welcome to Halcyonic</h2>
+										<p>
+											This is <strong>Halcyonic</strong>, a free site template
+											by <a href="http://twitter.com/ajlkn">AJ</a> for
+											<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
+											built on HTML5 + CSS3, and includes 5 unique page layouts.
+										</p>
+									</section>
+
+							</div>
+							<div class="col-3 col-6-medium col-12-small">
+
+								<!-- Feature #2 -->
+									<section>
+										<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
+										<h2>Responsive You Say?</h2>
+										<p>
+											Yes! Halcyonic is built to be fully responsive so it looks great
+											at every screen size, from desktops to tablets to mobile phones.
+										</p>
+									</section>
+
+							</div>
+							<div class="col-3 col-6-medium col-12-small">
+
+								<!-- Feature #3 -->
+									<section>
+										<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
+										<h2>License Info</h2>
+										<p>
+											Halcyonic is licensed under the <a href="http://html5up.net/license">CCA</a> license,
+											so use it for personal/commercial use as much as you like (just keep
+											our credits intact).
+										</p>
+									</section>
+
+							</div>
+							<div class="col-3 col-6-medium col-12-small">
+
+								<!-- Feature #4 -->
+									<section>
+										<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
+										<h2>Volutpat etiam aliquam</h2>
+										<p>
+											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
+											eu varius nibh. Suspendisse vitae magna mollis.
+										</p>
+									</section>
+
+							</div>
+						</div>
+					</div>
+				</section>
+
+			<!-- Content -->
+				<section id="content">
+					<div class="container">
+						<div class="row aln-center">
+							<div class="col-4 col-12-medium">
+
+								<!-- Box #1 -->
+									<section>
+										<header>
+											<h2>Who We Are</h2>
+											<h3>A subheading about who we are</h3>
+										</header>
+										<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
+										<p>
+											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan magna sed.
+											Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis
+											justo facilisis quis. Sed sagittis amet lorem ipsum.
+										</p>
+									</section>
+
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+
+								<!-- Box #2 -->
+									<section>
+										<header>
+											<h2>What We Do</h2>
+											<h3>A subheading about what we do</h3>
+										</header>
+										<ul class="check-list">
+											<li>Sed mattis quis rutrum accum</li>
+											<li>Eu varius nibh suspendisse lorem</li>
+											<li>Magna eget odio amet mollis justo</li>
+											<li>Facilisis quis sagittis mauris</li>
+											<li>Amet tellus gravida lorem ipsum</li>
+										</ul>
+									</section>
+
+							</div>
+							<div class="col-4 col-6-medium col-12-small">
+
+								<!-- Box #3 -->
+									<section>
+										<header>
+											<h2>What People Are Saying</h2>
+											<h3>And a final subheading about our clients</h3>
+										</header>
+										<ul class="quote-list">
+											<li>
+												<img src="images/pic06.jpg" alt="" />
+												<p>"Neque nisidapibus mattis"</p>
+												<span>Jane Doe, CEO of UntitledCorp</span>
+											</li>
+											<li>
+												<img src="images/pic07.jpg" alt="" />
+												<p>"Lorem ipsum consequat!"</p>
+												<span>John Doe, President of FakeBiz</span>
+											</li>
+											<li>
+												<img src="images/pic08.jpg" alt="" />
+												<p>"Magna veroeros amet tempus"</p>
+												<span>Mary Smith, CFO of UntitledBiz</span>
+											</li>
+										</ul>
+									</section>
+
+							</div>
+						</div>
+					</div>
+				</section>
+
+			<!-- Footer -->
+				<section id="footer">
+					<div class="container">
+						<div class="row">
+							<div class="col-8 col-12-medium">
+
+								<!-- Links -->
+									<section>
+										<h2>Links to Important Stuff</h2>
+										<div>
+											<div class="row">
+												<div class="col-3 col-12-small">
+													<ul class="link-list last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+												<div class="col-3 col-12-small">
+													<ul class="link-list last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+												<div class="col-3 col-12-small">
+													<ul class="link-list last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+												<div class="col-3 col-12-small">
+													<ul class="link-list last-child">
+														<li><a href="#">Neque amet dapibus</a></li>
+														<li><a href="#">Sed mattis quis rutrum</a></li>
+														<li><a href="#">Accumsan suspendisse</a></li>
+														<li><a href="#">Eu varius vitae magna</a></li>
+													</ul>
+												</div>
+											</div>
+										</div>
+									</section>
+
+							</div>
+							<div class="col-4 col-12-medium imp-medium">
+
+								<!-- Blurb -->
+									<section>
+										<h2>An Informative Text Blurb</h2>
+										<p>
+											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
+											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
+											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
+											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
+										</p>
+									</section>
+
+							</div>
+						</div>
+					</div>
+				</section>
+
+			<!-- Copyright -->
+				<div id="copyright">
+					&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
 				</div>
-			</div>
-		</section>
 
-		<!-- Main Content -->
-		<section class="wrapper style1">
-			<div class="container">
-				<div class="row">
-					<section class="6u">
-						<header class="major">
-							<h2>Who We Are</h2>
-							<span class="byline">Veteran-founded, mission-driven housing.</span>
-						</header>
-						<p>We are a local, veteran-owned company based in Huntsville, Alabama, focused on acquiring, renovating, and managing single-family rentals with integrity and professionalism.</p>
-						<a href="about-us.html" class="button">Learn More</a>
-					</section>
-					<section class="6u">
-						<header class="major">
-							<h2>What We Offer</h2>
-							<span class="byline">From rentals to investments, we’ve got you covered.</span>
-						</header>
-						<p>Whether you're looking to rent a quality home or invest in real estate for passive income, FRST Properties LLC provides reliable, transparent, and professional service every step of the way.</p>
-						<a href="investor-portal.html" class="button">Get Started</a>
-					</section>
-				</div>
-			</div>
-		</section>
+		</div>
 
-		<!-- Testimonials -->
-		<section class="carousel wrapper">
-			<div class="container">
-				<header class="major">
-					<h2>What Our Tenants & Investors Say</h2>
-					<span class="byline">See testimonials from those we serve.</span>
-				</header>
-				<!-- Add carousel items here if needed -->
-			</div>
-		</section>
-
-		<!-- Footer -->
-		<section id="footer" class="wrapper">
-			<div class="container">
-				<div class="row">
-					<section class="4u">
-						<header class="major">
-							<h2>Quick Links</h2>
-						</header>
-						<ul class="link-list">
-							<li><a href="about-us.html">About Us</a></li>
-							<li><a href="available-homes.html">Available Homes</a></li>
-							<li><a href="investor-portal.html">Investor Portal</a></li>
-							<li><a href="contact-us.html">Contact Us</a></li>
-						</ul>
-					</section>
-					<section class="4u">
-						<header class="major">
-							<h2>Why Choose FRST Properties?</h2>
-						</header>
-						<p>We’re a local, veteran-owned company focused on providing clean, affordable rentals and attractive investment opportunities across North Alabama.</p>
-					</section>
-					<section class="4u">
-						<header class="major">
-							<h2>Contact</h2>
-						</header>
-						<ul class="link-list">
-							<li>Email: <a href="mailto:frstpropertiesllc@gmail.com">frstpropertiesllc@gmail.com</a></li>
-							<li>Location: Huntsville, Alabama</li>
-						</ul>
-					</section>
-				</div>
-			</div>
-			<div id="copyright">
-				<ul>
-					<li>&copy; 2025 FRST Properties LLC</li>
-					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-				</ul>
-			</div>
-		</section>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
