--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Halcyonic by HTML5 UP</title>
+		<title>FRST Properties</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -21,15 +21,15 @@
 							<div class="col-12">
 
 								<!-- Logo -->
-									<h1><a href="index.html" id="logo">Halcyonic</a></h1>
+									<h1><a href="index.html" id="logo">FRST Properties</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a>
-										<a href="threecolumn.html">Three Column</a>
-										<a href="twocolumn1.html">Two Column #1</a>
-										<a href="twocolumn2.html">Two Column #2</a>
-										<a href="onecolumn.html">One Column</a>
+										<a href="threecolumn.html">Cash for Homes</a>
+										<a href="twocolumn1.html">Available Rental Homes</a>
+										<a href="twocolumn2.html">Tenant References</a>
+										<a href="onecolumn.html">Invest With Us</a>
 									</nav>
 
 							</div>
@@ -41,8 +41,8 @@
 								<div class="col-6 col-12-medium">
 
 									<!-- Banner Copy -->
-										<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-										<a href="#" class="button-large">Go on, click me!</a>
+										<p>We are a family founded, veteran owned, private landlord company serving Huntsville and surrounding communities. See our available homes here...</p>
+										<a href="#" class="button-large">Available Rentals</a>
 
 								</div>
 								<div class="col-6 col-12-medium imp-medium">
@@ -65,12 +65,10 @@
 								<!-- Feature #1 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
-										<h2>Welcome to Halcyonic</h2>
+										<h2>About Us</h2>
 										<p>
-											This is <strong>Halcyonic</strong>, a free site template
+											FRST Properties stands for Francis & Stanley. Named after our two owners Francis Kelly & Craig Stanley. Read more about us and what makes us diffirent here.
 											by <a href="http://twitter.com/ajlkn">AJ</a> for
-											<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
-											built on HTML5 + CSS3, and includes 5 unique page layouts.
 										</p>
 									</section>
 
@@ -80,10 +78,9 @@
 								<!-- Feature #2 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
-										<h2>Responsive You Say?</h2>
+										<h2>Cash for Homes</h2>
 										<p>
-											Yes! Halcyonic is built to be fully responsive so it looks great
-											at every screen size, from desktops to tablets to mobile phones.
+											Need to sell your home quickly and hassle-free? FRST Properties offers fair, fast cash offers with no fees, no commissions, and flexible closing—making your transition smooth and stress-free.We buy in any condition. 
 										</p>
 									</section>
 
@@ -93,11 +90,9 @@
 								<!-- Feature #3 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
-										<h2>License Info</h2>
+										<h2>Invest With Us</h2>
 										<p>
-											Halcyonic is licensed under the <a href="http://html5up.net/license">CCA</a> license,
-											so use it for personal/commercial use as much as you like (just keep
-											our credits intact).
+											Looking for steady returns and hands-off real estate investing? Partner with FRST Properties to grow your wealth through expertly managed home renovations and rental properties in North Alabama.
 										</p>
 									</section>
 
@@ -107,10 +102,9 @@
 								<!-- Feature #4 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
-										<h2>Volutpat etiam aliquam</h2>
+										<h2>Tenant References</h2>
 										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse
-											eu varius nibh. Suspendisse vitae magna mollis.
+											Lease templates, disclosures, checklists, and more. 
 										</p>
 									</section>
 
@@ -145,11 +139,11 @@
 								<!-- Box #2 -->
 									<section>
 										<header>
-											<h2>What We Do</h2>
-											<h3>A subheading about what we do</h3>
+											<h2>Our Services</h2>
+											<h3>A list of some of our services:</h3>
 										</header>
 										<ul class="check-list">
-											<li>Sed mattis quis rutrum accum</li>
+											<li>Create </li>
 											<li>Eu varius nibh suspendisse lorem</li>
 											<li>Magna eget odio amet mollis justo</li>
 											<li>Facilisis quis sagittis mauris</li>
@@ -271,4 +265,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
