--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
 										<h2>About Us</h2>
 										<p>
 											FRST Properties stands for Francis & Stanley. Named after our two owners Francis Kelly & Craig Stanley. Read more about us and what makes us diffirent here.
-											by <a href="http://twitter.com/ajlkn">AJ</a> for
 										</p>
 									</section>
 
@@ -123,13 +122,11 @@
 									<section>
 										<header>
 											<h2>Who We Are</h2>
-											<h3>A subheading about who we are</h3>
+											<h3>Francis & StanleyProperties</h3>
 										</header>
 										<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
 										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan magna sed.
-											Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis
-											justo facilisis quis. Sed sagittis amet lorem ipsum.
+											FRST Properties stands for Francis & Stanley. Named after our two owners Francis Kelly & Craig Stanley. Founded in 2019 we pride ourselves on providing affordable quality homes at top knoch service for our tenants. As a private landlord company we own all of our own rentals and can offer more flexibility for our tenants.
 										</p>
 									</section>
 
@@ -143,11 +140,11 @@
 											<h3>A list of some of our services:</h3>
 										</header>
 										<ul class="check-list">
-											<li>Create </li>
-											<li>Eu varius nibh suspendisse lorem</li>
-											<li>Magna eget odio amet mollis justo</li>
-											<li>Facilisis quis sagittis mauris</li>
-											<li>Amet tellus gravida lorem ipsum</li>
+											<li>Property Managment</li>
+											<li>Home buying Services</li>
+											<li>Homes for Sale</li>
+											<li>Real Estate Investing</li>
+											<li>Home Renovations</li>
 										</ul>
 									</section>
 
@@ -158,13 +155,13 @@
 									<section>
 										<header>
 											<h2>What People Are Saying</h2>
-											<h3>And a final subheading about our clients</h3>
+											<h3>Our tenants are our family</h3>
 										</header>
 										<ul class="quote-list">
 											<li>
 												<img src="images/pic06.jpg" alt="" />
-												<p>"Neque nisidapibus mattis"</p>
-												<span>Jane Doe, CEO of UntitledCorp</span>
+												<p>"xxx"</p>
+												<span>  </span>
 											</li>
 											<li>
 												<img src="images/pic07.jpg" alt="" />
@@ -191,59 +188,7 @@
 							<div class="col-8 col-12-medium">
 
 								<!-- Links -->
-									<section>
-										<h2>Links to Important Stuff</h2>
-										<div>
-											<div class="row">
-												<div class="col-3 col-12-small">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="col-3 col-12-small">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="col-3 col-12-small">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-												<div class="col-3 col-12-small">
-													<ul class="link-list last-child">
-														<li><a href="#">Neque amet dapibus</a></li>
-														<li><a href="#">Sed mattis quis rutrum</a></li>
-														<li><a href="#">Accumsan suspendisse</a></li>
-														<li><a href="#">Eu varius vitae magna</a></li>
-													</ul>
-												</div>
-											</div>
-										</div>
-									</section>
-
-							</div>
-							<div class="col-4 col-12-medium imp-medium">
-
-								<!-- Blurb -->
-									<section>
-										<h2>An Informative Text Blurb</h2>
-										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse eu
-											varius nibh. Suspendisse vitae magna eget odio amet mollis. Duis neque nisi,
-											dapibus sed mattis quis, sed rutrum accumsan sed. Suspendisse eu varius nibh
-											lorem ipsum amet dolor sit amet lorem ipsum consequat gravida justo mollis.
-										</p>
-									</section>
+								
 
 							</div>
 						</div>
@@ -267,3 +212,4 @@
 	</body>
 
 </html>
+
