--- a/index.html
+++ b/index.html
@@ -188,7 +188,25 @@
 							<div class="col-8 col-12-medium">
 
 								<!-- Links -->
-								
+					<div class="container">
+						<div class="row">
+							<div class="col-12">
+
+								<!-- Logo -->
+									<h1><a href="index.html" id="logo">FRST Properties</a></h1>
+
+								<!-- Nav -->
+									<nav id="nav">
+										<a href="index.html">Homepage</a>
+										<a href="threecolumn.html">Cash for Homes</a>
+										<a href="twocolumn1.html">Available Rental Homes</a>
+										<a href="twocolumn2.html">Tenant References</a>
+										<a href="onecolumn.html">Invest With Us</a>
+									</nav>
+
+							</div>
+						</div>
+					</div>
 
 							</div>
 						</div>
