--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
 							<div class="col-12">
 
 								<!-- Logo -->
-									<h1><a href="index.html" id="logo">FRST Properties</a></h1>
+									<h1><a href="index.html" id="logo">FRST Properties LLC</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
-										<a href="index.html">Homepage</a>
+										<a href="index.html">Homepage</a> <p></p>
 										<a href="threecolumn.html">Cash for Homes</a>
 										<a href="twocolumn1.html">Available Rental Homes</a>
 										<a href="twocolumn2.html">Tenant References</a>
@@ -230,4 +230,5 @@
 	</body>
 
 </html>
+
 
