--- a/index.html
+++ b/index.html
@@ -198,10 +198,10 @@
 								<!-- Nav -->
 									<nav id="nav">
 										<a href="index.html">Homepage</a> <p></p>
-										<a href="threecolumn.html">Cash for Homes</a>
-										<a href="twocolumn1.html">Available Rental Homes</a>
-										<a href="twocolumn2.html">Tenant References</a>
-										<a href="onecolumn.html">Invest With Us</a>
+										<a href="threecolumn.html">Cash for Homes</a> <p></p>
+										<a href="twocolumn1.html">Available Rental Homes</a> <p></p>
+										<a href="twocolumn2.html">Tenant References</a> <p></p>
+										<a href="onecolumn.html">Invest With Us</a> <p></p>
 									</nav>
 
 							</div>
@@ -230,5 +230,6 @@
 	</body>
 
 </html>
+
 
 
