--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<div class="col-6 col-12-medium imp-medium">
 
 									<!-- Banner Image -->
-										<a href="#" class="bordered-feature-image"><img src="websitebanner.png" alt="" /></a>
+										<a href="#" class="bordered-feature-image"><img src="images/websitebanner.png" alt="" /></a>
 
 								</div>
 							</div>
@@ -230,6 +230,7 @@
 	</body>
 
 </html>
+
 
 
 
